Bug Fixes and Denial + Error pages added