@@ -1,44 +1,45 @@
 package com.example.taskmanagerdanielpius.service;
 
 import com.example.taskmanagerdanielpius.model.TaskModel;
-import org.springframework.security.access.prepost.PreAuthorize;
+
 import org.springframework.stereotype.Service;
 
 import java.util.*;
-import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
+
 
 @Service
 public class TaskService {
 
     private List<TaskModel> tasks = new ArrayList<>();
-    private AtomicInteger idCounter = new AtomicInteger();
+    private int idCounter = 1;
 
     public List<TaskModel> getTasksForUser(String username) {
         return tasks.stream()
                 .filter(task -> task.getOwnerUsername().equals(username))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    @PreAuthorize("hasRole('ADMIN')")
     public List<TaskModel> getAllTasks() {
         return tasks;
     }
 
-    public void addTask(String title, String description, String username) {
-        tasks.add(new TaskModel(idCounter.incrementAndGet(), title, description, false, username));
+    public void addTask(TaskModel task, String username) {
+        task.setId(idCounter++);
+        task.setOwnerUsername(username);
+        task.setCompleted(false);
+        tasks.add(task);
     }
 
-    public void markCompleted(Integer id, String username) {
-        tasks.stream()
-                .filter(task -> task.getId().equals(id) && task.getOwnerUsername().equals(username))
-                .findFirst()
-                .ifPresent(task -> task.setCompleted(true));
+    public void markComplete(int id, String username) {
+        for (TaskModel task : tasks) {
+            if (task.getId() == id &&
+                    task.getOwnerUsername().equals(username)) {
+                task.setCompleted(true);
+            }
+        }
     }
 
-    @PreAuthorize("hasRole('ADMIN')")
-    public void deleteTask(Integer id) {
-        tasks.removeIf(task -> task.getId().equals(id));
+    public void deleteTask(int id) {
+        tasks.removeIf(task -> task.getId() == id);
     }
-
 }
